// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-cTAIfT bzxRcy"
  >
    <div
      className="Carousel__CarouselWrapper-xel9ev-0 gOgmvY"
    >
      <ul
        className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 ddXLVQ dVCLRi"
      >
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            0
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            1
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            2
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            3
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            4
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            5
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            6
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            7
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            8
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            9
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            10
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            11
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            12
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            13
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            14
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            15
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            16
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            17
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            18
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            19
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            20
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            21
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            22
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            23
          </div>
        </li>
        <li
          className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
        >
          <div
            className="sc-bXdNzS eQbNnK"
          >
            24
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="Carousel__CarouselWrapper-xel9ev-0 gOgmvY"
  >
    <ul
      className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 Wfnkg dVCLRi"
    >
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-ihINtW kQeCHc"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-ihINtW kQeCHc"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-ihINtW kQeCHc"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-ihINtW kQeCHc"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-ihINtW kQeCHc"
        >
          -1
          , 
          -1
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="Carousel__CarouselWrapper-xel9ev-0 gOgmvY"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to left
    </button>
    <ul
      className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 ddXLVQ dVCLRi"
    >
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          0
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          2
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          3
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          4
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          5
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          6
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          7
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          8
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          9
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          10
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          11
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          12
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          13
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          14
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          15
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          16
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          17
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          18
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          19
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          20
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          21
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          22
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          23
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-fvpsdx gxLZzy"
        >
          24
        </div>
      </li>
    </ul>
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to Right
    </button>
  </div>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="Carousel__CarouselWrapper-xel9ev-0 gOgmvY"
  >
    <ul
      className="Reel-sc-10l7fx7-0-ul Carousel__ItemsScrollWrapper-xel9ev-1 Wfnkg dVCLRi"
    >
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-eySxxw kvSfAZ"
        >
          0
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-eySxxw kvSfAZ"
        >
          1
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-eySxxw kvSfAZ"
        >
          2
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-eySxxw kvSfAZ"
        >
          3
        </div>
      </li>
      <li
        className="Carousel__CarouselScrollItem-xel9ev-2 kmuPFR"
      >
        <div
          className="sc-eySxxw kvSfAZ"
        >
          4
        </div>
      </li>
    </ul>
  </div>
</div>
`;
